<resources>
    <string name="app_name">ToDoList</string>

    <string name="google">Google</string>
    <string name="Email">Email</string>
    <string name="notes">Заметки</string>
    <string name="sub_todo">Добавить задачу</string>
    <string name="is_todo_secret">ToDo секретная</string>
    <string name="todo_title">Название задачи</string>
    <string name="plus">+</string>
    <string name="cancel">Отмена</string>
    <string name="create">Создать</string>
    <string name="create_new_todo">Создание новой ToDO</string>
    <string name="select_datetime_hint">Выбирите дату</string>
    <string name="pick_datetime">Выбрать дату</string>
    <string name="title_user_list">Список пользователей</string>
    <string name="delete">Удалить</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="password_reset">Воставновить пароль</string>
    <string name="not_all_fields_are_filled">Заполните все поля</string>
    <string name="password_is_too_short">Слишком короткий пароль</string>
    <string name="email_is_invalid">Неверная почта</string>
    <string name="the_email_is_already_registered">Пользовательс такой почтой уже зарегистрирован</string>
    <string name="register_is_failed_try_again_later">Не удалось зарегистрироваться, попробуйте позже</string>
    <string name="email_hint">Почта</string>
    <string name="password_hint">Пароль</string>
    <string name="done">Применить</string>
    <string name="toolbar_color">Toolbar</string>
    <string name="background_color">Background</string>
    <string name="window_color">System bar</string>
    <string name="settings">Настройки</string>
    <string name="change_nickname">Изменение ника</string>
    <string name="apply">Применить</string>
    <string name="text_a_new_nickname">Введите новый никнейм</string>
    <string name="password_hint_repeat">Повторите пароль</string>
    <string name="sign_out">Выйти</string>
    <string name="sign_in_failed">Неверная почта или пароль</string>
    <string name="passwords_dont_match">Пароли не совпадают</string>
    <string name="title_note_hint">Название заметки</string>
    <string name="profile_menu">Профиль</string>
    <string name="todo_list_menu">Задачи</string>
    <string name="no_ethernet">Нет интернета</string>
    <string name="error">Что-то пошло не так</string>
    <string name="a_sign_in">Вход</string>
    <string name="or">или</string>
    <string name="welcome_to_todolist">Добро пожаловть в ToDo лист</string>
    <string name="dark_mode">Dark Mode</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="body_note_hint">Текст заметки…</string>
    <string name="to_select_a_deadline">Выбрать дедлайн</string>
    <string name="description_create_or_update_the_note">Создать/обновить заметку</string>
    <string name="description_create_or_update_todo">Создать/обновить задачу</string>
    <string name="is_todo_completed">Задача выполнена</string>
    <string name="add_comment">Добавить комментарий</string>
    <string name="___comments___">------Комментарии------</string>
    <string name="changing_todo_visibility">Изменение видимости задачи</string>
    <string name="you_havent_nickname">У вас не установлено имя</string>
    <string name="count_of_notes">Колличество заметок:</string>
    <string name="count_of_todo_in_progress">Колличество задач в работе:</string>
    <string name="count_of_ended_todo">Колличество выполненных задач:</string>
    <string name="count_of_todo">Колличество ваших задач:</string>
    <string name="fields_should_be_not_empty">Поля не могут быть пустыми</string>
</resources>