<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.userprofile.UserProfileFragment">

    <TextView
        android:id="@+id/userNickName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/frame"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/you_havent_nickname"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/countOfToDos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/frame"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/count_of_todo"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/countOfNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/frame"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/count_of_notes"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/countOfEndedToDos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/frame"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/count_of_ended_todo"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/countOfToDosInWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/frame"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/count_of_todo_in_progress"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSettings"
        android:background="@drawable/frame"
        android:text="@string/settings"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignOut"
        android:background="@drawable/frame"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
