<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:autofillHints="emailAddress"
        android:id="@+id/editTextEmail"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:autofillHints="password"
        android:singleLine="true"
        android:id="@+id/editTextPassword"
        android:inputType="textPassword"
        android:gravity="center"
        android:hint="@string/password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:autofillHints="password"
        android:singleLine="true"
        android:id="@+id/editTextPasswordSecond"
        android:inputType="textPassword"
        android:gravity="center"
        android:hint="@string/password_hint_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDone"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>