<?xml version="1.0" encoding="utf-8"?>
<FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ShowEditCreateToDo.ShowEditCreateToDoFragment">


    <LinearLayout
        android:background="@drawable/frame"
        android:layout_margin="3dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:hint="@string/todo_title"
                android:textSize="25sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/title_todo"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <ImageView
                android:contentDescription="@string/is_todo_secret"
                android:id="@+id/icon_secret_todo"
                android:src="@drawable/ic_secret_todo"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_marginTop="15dp"
                android:layout_gravity="top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:id="@+id/deadline"
            android:layout_gravity="end"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="Выбрать дедлайн"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="text"
                android:importantForAutofill="no"
                android:id="@+id/textSubTodo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/sub_todo" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAddSubTodo"
                android:text="@string/plus"
                android:background="?android:attr/selectableItemBackground"
                android:textSize="25sp"
                android:layout_width="48dp"
                android:layout_height="48dp"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcViewSubTodo"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/sub_todo"
            tools:itemCount="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_save"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"/>

</FrameLayout>